<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/title"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-thin"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/numbering_system"
        android:textColor="#B53E65"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/EntredNumber"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:background="@drawable/unchosen"
        android:ems="10"
        android:gravity="left|center"
        android:hint="@string/_1100"
        android:inputType="number"
        android:maxLines="1"
        android:padding="16dp"
        android:singleLine="true"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
        android:id="@+id/btn_toBinary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="2dp"
        android:background="@drawable/button_state"
        android:text="@string/binary"
        app:layout_constraintEnd_toStartOf="@+id/btn_toDecimal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EntredNumber" />

    <Button
        android:id="@+id/btn_toDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:background="@drawable/button_state"
        android:text="@string/decimal"
        app:layout_constraintEnd_toStartOf="@+id/btn_toHexaDecimal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_toBinary"
        app:layout_constraintTop_toTopOf="@+id/btn_toBinary" />

    <Button
        android:id="@+id/btn_clean"
        android:layout_width="105dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:text="@string/clean"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toEndOf="@+id/EntredNumber"
        app:layout_constraintTop_toTopOf="@+id/EntredNumber" />

    <Button
        android:id="@+id/btn_toHexaDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:background="@drawable/button_state"

        android:text="@string/hexa"
        app:layout_constraintEnd_toStartOf="@+id/btn_toOctal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_toDecimal"
        app:layout_constraintTop_toTopOf="@+id/btn_toBinary" />

    <Button
        android:id="@+id/btn_toOctal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:background="@drawable/button_state"
        android:text="@string/octal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_toHexaDecimal"
        app:layout_constraintTop_toTopOf="@+id/btn_toBinary" />

    <Button
        android:id="@+id/btn_Convert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/convert"
        android:background="@drawable/chosen"
        android:backgroundTint="#B53E65"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_toDecimal" />

    <TextView
        android:id="@+id/result"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/unchosen"
        android:gravity="center"
        android:text="12"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Convert" />
</androidx.constraintlayout.widget.ConstraintLayout>